--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </section>
       <main>
         <h1 class="game-name-heading">Rock Paper Scissors</h1>
-        <section id="gameplay" class="game-play">
-          <div role="button" id="classicButton" class="classic-button">
+        <section data-landingPg="true" id="gameplay" class="game-play">
+          <div data-role="button" role="button" id="classicButton" class="classic-button">
             <h2 data-game="classic" class="game-option-heading">Classic</h2>
             <ul data-game="classic" class="game-option-button">
               <li data-game="classic">Rock > Scissors</li>
@@ -31,12 +31,12 @@
               <li data-game="classic">Scissors > Paper</li>
             </ul>
           </div>
-          <div role="button" id="extraButton" class="extra-button">
+          <div data-role="button" role="button" id="extraButton" class="extra-button">
             <h2  data-game="extra" class="game-option-heading">EXTRA Mode</h2>
             <ul  data-game="extra" class="game-option-button">
               <li  data-game="extra">Rock > Scissors & Paper Clip</li>
               <li  data-game="extra">Paper > Rock & Tape</li>
-              <li  data-game="extra">Scissors > Paper & Tape</li>
+              <li  data-game="extra">Scissors > Paper & Paper Clip</li>
               <li  data-game="extra">Paper Clip > Paper & Tape</li>
               <li  data-game="extra">Tape > Scissors & Rock</li>
             </ul>
