--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </section>
       <main>
         <h1 class="game-name-heading">Rock Paper Scissors</h1>
+        <p id="headingInfo" class="heading-info">Choose Game Style</p>
         <section data-landingPg="true" id="gameplay" class="game-play">
           <div data-role="button" role="button" id="classicButton" class="classic-button">
             <h2 data-game="classic" class="game-option-heading">Classic</h2>
