Refactor code layout and naming conventions

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <p id="humanWins" class="win-counter">Wins: 0</p>
         <button type="button" name="switch-game-style" id="switchGame"
         class="switch-game hidden">Switch Game Style</button>
+        
       </section>
       <main>
         <h1 class="game-name-heading">Rock Paper Scissors</h1>
         <p id="headingInfo" class="heading-info">Choose Game Style</p>
-        <div data-role="button" role="button" id="selectGameButton" class="classic-button">
+        <div data-role="button" role="button" id="selectGameButton"
+          class="classic-button">
+
           <h2 data-game="classic" class="game-option-heading">Classic</h2>
           <ul data-game="classic" class="game-option-button">
             <li data-game="classic">Rock > Scissors</li>
@@ -30,7 +33,9 @@
             <li data-game="classic">Scissors > Paper</li>
           </ul>
         </div>
-        <div data-role="button" role="button" id="selectGameButton" class="extra-button">
+        <div data-role="button" role="button" id="selectGameButton"
+          class="extra-button">
+
           <h2  data-game="extra" class="game-option-heading">EXTRA Mode</h2>
           <ul  data-game="extra" class="game-option-button">
             <li  data-game="extra">Rock > Scissors & Paper Clip</li>
