WIP CSS add background to gameplay

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       </section>
       <main>
         <h1 class="game-name-heading">Rock Paper Scissors</h1>
-        <p id="headingInfo" class="heading-info">Choose Game Style</p>
+        <div id="headingInfoWrapper" class="heading-info-wrapper">
+          <p class="heading-info">Choose Game Style</p>
+        </div>
         <div data-role="button" role="button" id="selectGameButton"
           class="classic-button">
 
@@ -45,7 +47,7 @@
             <li  data-game="extra">Tape > Scissors & Rock</li>
           </ul>
         </div>
-        <section id="gameplay" class="game-play"></section>
+        <section id="gameplay" class="gameplay hidden"></section>
       </main>
       <section class="player-section-two">
         <h1 class="player-heading">Computer!</h1>
