Add aria lables

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <div>
+      <span class="background-image" roll="img" aria-label="poofy blue clouds"></span>
+    </div>
     <div class="game-container">
       <section class="player-section-one">
         <h1 class="player-heading">Human!</h1>
@@ -27,20 +30,20 @@
         <div id="headingInfoWrapper" class="heading-info-wrapper">
           <p class="heading-info">Choose Game Style</p>
         </div>
-        <div data-role="button" role="button" id="selectGameButton"
+        <div data-role="button" id="selectGameButton"
           class="classic-button">
 
-          <h2 data-game="classic" class="game-option-heading">Classic</h2>
+          <h2 data-game="classic" role="button" aria-label="click to choose classic gameplay" class="game-option-heading">Classic</h2>
           <ul data-game="classic" class="game-option-button">
             <li data-game="classic">Rock > Scissors</li>
             <li data-game="classic">Paper > Rock</li>
             <li data-game="classic">Scissors > Paper</li>
           </ul>
         </div>
-        <div data-role="button" role="button" id="selectGameButton"
+        <div data-role="button" id="selectGameButton"
           class="extra-button">
 
-          <h2  data-game="extra" class="game-option-heading">EXTRA Mode</h2>
+          <h2  data-game="extra" role="button" aria-label="click to choose EXTRA gameplay" class="game-option-heading">EXTRA Mode</h2>
           <ul  data-game="extra" class="game-option-button">
             <li  data-game="extra">Rock > Scissors & Paper Clip</li>
             <li  data-game="extra">Paper > Rock & Tape</li>
