--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class="game-wrapper">
       <section id="human" class="player-section">
         <img class="player-token" src="assets/human.png" alt="Cute human with blue afro poofs who's excited to play!">
-        <h2 class="wins">Wins: 0</h2>
+        <h2 id="humanWins" class="wins"></h2>
+        <button id="clearWins" class="clear-btn hidden">Clear Wins</button>
       </section>
       <div class="game-play-wrapper">
         <h1 class="game-title">Rock Paper Scissors</h1>
@@ -23,7 +24,7 @@
       </div>
       <section id="computer" class="player-section">
         <img class="player-token" src="assets/computer.png" alt="Hot pink computer with a smile face who's excited to play!">
-        <h2 class="wins">Wins: 0</h2>
+        <h2 id="computerWins" class="wins"></h2>
       </section>
     </div>
     <script src="./src/game.js"></script>
