Update image meta tag

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:image" content="assets/desktop-classic.png">
-    <link rel="icon" href="assets/favicon.ico">
+    <meta property="og:image" content="./assets/desktop-classic.png">
+    <link rel="icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
